fix: Spacing & dimension managed for elements popop

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -1936,8 +1936,8 @@ input[type="text"].select2-search__field {
 
 .customize-control-ast-responsive-color .ast-responsive-btns {
   position: absolute;
-  left: 0px;
-  top: 6px;
+  left: 0;
+  top: 0;
 }
 
 .ast-field-settings-modal .customize-control-ast-responsive-color .customize-control-content .color-button-wrap {
@@ -1975,10 +1975,6 @@ input[type="text"].select2-search__field {
 
 .ast-responsive-color .ast-color-btn-reset-wrap {
   left: 66px;
-}
-
-.ast-responsive-color .ast-responsive-btns {
-  top: 0;
 }
 
 @supports (-moz-appearance: none) {
